einstellung_derive/src/trybuild_tests/validate_wrong_return_type.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/validate_wrong_return_type.rs
  |
  | #[derive(Config)]
  |          ^^^^^^ expected `bool`, found `Result<_, _>`
  |
  = note: expected type `bool`
             found enum `Result<_, _>`
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
